added batch mapping changes